[package]
name = "omni-rebalancer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
dotenv = "0.15.0"

tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.20.2"

near-lake-framework = "0.7.11"
near-jsonrpc-client = "0.17.0"
near-jsonrpc-primitives = "0.30.1"
near-primitives = "0.30.1"
near-crypto = "0.30.1"
near-sdk = "5.14.0"

alloy = "1.0.9"

solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-rpc-client-api = "2.2.7"

omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "83e16c58165cf06717a182d70f347148b0abc12f" }
