[package]
name = "omni-rebalancer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
dotenv = "0.15.0"

futures = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.20.2"
rust_decimal = "1.37.1"

near-jsonrpc-client = "0.16.0"
near-jsonrpc-primitives = "0.29.1"
near-primitives = "0.29.1"
near-crypto = "0.29.1"
near-sdk = "5.14.0"

alloy = "1.0.9"

solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-rpc-client-api = "2.2.7"

reqwest = "0.12.18"

omni-types = { git = "https://github.com/near-one/omni-bridge", package = "omni-types", rev = "3662269ae0bd92fafae19767d57de048fc8d8b8c" }
near-bridge-client = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "near-bridge-client", rev = "f9b46a5f7f037deeb8b1fe137a52597912c325d9" }
bridge-connector-common = { git = "https://github.com/Near-One/bridge-sdk-rs", package = "bridge-connector-common", rev = "f9b46a5f7f037deeb8b1fe137a52597912c325d9" }
